mini-pascal/test_cases/bad/Example4.pas
Program Example4;
(* COMMENTS *)
	Writeln('Hello World. Prepare to learn PASCAL!!')
	Readln;
End.